Making some demos more readable

--- a/lime/demos/tests/run.htm
+++ b/lime/demos/tests/run.htm
@@ -11,9 +11,9 @@
         if(match==-1){
             goog.require('goog.dom');
             test={start: function(){
-            var _allDemos = ['anim1','audio','autoresize','button1','button2','canvas','events1','events2',
-                'events3','events4','events5','labels1','mask','mask2','opacity','poly1',
-                'scenes1','shapes1','shapes2','shapes3','sprites1','scroll'].sort();
+            var _allDemos = ['anim1','anim2','anim3','audio','autoresize','button1','button2','canvas','events1','events2',
+                'events3','events4','events5','labels1','mask','mask2','poly1',
+                'shapes1','shapes2','shapes3','scroll'].sort();
                 
             for(var i=0;i<_allDemos.length;i++){
                 var a = goog.dom.createDom('a',{href:'?run='+_allDemos[i]},_allDemos[i]);
