Fixing MoveTo animation with duration set with setSpeed() helper.

--- a/lime/demos/tests/run.htm
+++ b/lime/demos/tests/run.htm
@@ -11,7 +11,7 @@
         if(match==-1){
             goog.require('goog.dom');
             test={start: function(){
-            var _allDemos = ['anim1','anim2','anim3','audio','autoresize','button1','button2','canvas','events1','events2',
+            var _allDemos = ['anim1','anim2','anim3','anim4','audio','autoresize','button1','button2','canvas','events1','events2',
                 'events3','events4','events5','labels1','mask','mask2','opacity','poly1',
                 'shapes1','shapes2','shapes3','scroll'].sort();
                 
