--- a/lime/demos/roundball/rb.html
+++ b/lime/demos/roundball/rb.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="rb.js"></script>
 	<style>
 	body {
+	background: #1c6aa1;
 	background:-webkit-gradient(radial, 50% 50%, 10, 50% 50%, 850, from(#1eb1d8), to(#1b345e), color-stop(.4,#1c6aa1));
 	background: -moz-radial-gradient(center 45deg, circle farthest-side, #1eb1d8 0%, #1c6aa1 40%, #1b345e 100%);
 	}
