--- a/lime/demos/zlizer/zlizer.html
+++ b/lime/demos/zlizer/zlizer.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="zlizer.js"></script>
 	<style>
 	body {
+	background: #5ea71d;
 	background:-webkit-gradient(radial, 50% 50%, 10, 50% 50%, 850, from(#93d81e), to(#2f5c1b), color-stop(.6,#5ea71d));
 	background: -moz-radial-gradient(center 45deg, circle farthest-side, #93d81e 0%, #5ea71d 60%, #2f5c1b 100%);
 	
