First progress with frame fill

--- a/lime/demos/tests/run.htm
+++ b/lime/demos/tests/run.htm
@@ -13,7 +13,7 @@
             test={start: function(){
             var _allDemos = ['anim1','anim2','anim3','anim4','audio','autoresize','button1','button2',
                 'canvas','canvas2','canvascontext','events1','events2',
-                'events3','events4','events5','keyframe','labels1','mask','mask2','opacity','poly1',
+                'events3','events4','events5','frame1','keyframe','labels1','mask','mask2','opacity','poly1',
                 'shapes1','shapes2','shapes3','scroll'].sort();
                 
             for(var i=0;i<_allDemos.length;i++){
