New Box2D demo with sample how to do MouseJoints (dragging)

--- a/lime/demos/tests/run.htm
+++ b/lime/demos/tests/run.htm
@@ -11,7 +11,7 @@
         if(match==-1){
             goog.require('goog.dom');
             test={start: function(){
-            var _allDemos = ['anim1','anim2','anim3','anim4','audio','autoresize','box2d','button1','button2',
+            var _allDemos = ['anim1','anim2','anim3','anim4','audio','autoresize','box2d','box2d_2','button1','button2',
                 'canvas','canvas2','canvascontext','events1','events2','stroke',
                 'events3','events4','events5','frame1','frame2','frame3','frame4','keyframe','keyframe2','labels1','mask','mask2','opacity','poly1',
                 'shapes1','shapes2','shapes3','scroll'].sort();
