--- a/lime/demos/tests/run.htm
+++ b/lime/demos/tests/run.htm
@@ -14,7 +14,7 @@
             var _allDemos = ['anim1','anim2','anim3','anim4','audio','autoresize','box2d','box2d_2','button1','button2',
                 'canvas','canvas2','canvascontext','events1','events2','stroke',
                 'events3','events4','events5','frame1','frame2','frame3','frame4','keyframe','keyframe2','labels1','mask','mask2','opacity','poly1',
-                'shapes1','shapes2','shapes3','scroll'].sort();
+                'shapes1','shapes2','shapes3','scroll', 'Tiled1', 'Tiled2'].sort();
                 
             for(var i=0;i<_allDemos.length;i++){
                 var a = goog.dom.createDom('a',{href:'?run='+_allDemos[i]},_allDemos[i]);
