Isometric TMX support

--- a/lime/demos/tests/run.htm
+++ b/lime/demos/tests/run.htm
@@ -28,7 +28,7 @@
                 'shapes1','shapes2','shapes3',
                 'scroll',
                 'stroke',
-                'tiled1', 'tiled2'
+                'tiled1', 'tiled2', 'tiled3'
                 ].sort();
                 
             for(var i=0;i<_allDemos.length;i++){
