--- a/lime/tests/tmx.htm
+++ b/lime/tests/tmx.htm
@@ -39,22 +39,81 @@ function setUp(){
 }
 
 
-function testHelloWorld() {
-	assertEquals('2 + 2 = 4',2 + 2,4);
-}
-
 function testLoadTMXMap() {
 	
     var tmx = new lime.parser.TMX('assets/area02.tmx');
 	
 	assertNotNull('tmp object', tmx);
+
+}
+
+function testMainInfosTMXMap() {
+	var tmx = new lime.parser.TMX('assets/area02.tmx');
 	assertEquals('map orientation','orthogonal',tmx.orientation);
-	assertEquals('map orientation',1.0,tmx.version);
-	assertEquals('map orientation',40,tmx.width);
-	assertEquals('map orientation',15,tmx.height);
-	assertEquals('map orientation',32,tmx.tilewidth);
-	assertEquals('map orientation',32,tmx.tileheight);
-	assertEquals('map orientation',1,tmx.properties.length);
+	assertEquals('map version',1.0,tmx.version);
+	assertEquals('map width',40,tmx.width);
+	assertEquals('map height',15,tmx.height);
+	assertEquals('map tilewidth',32,tmx.tilewidth);
+	assertEquals('map tileheight',32,tmx.tileheight);
+	assertEquals('map properties count',1,tmx.properties.length);
+}
+
+function testTilesTMXMap() {
+	var tmx = new lime.parser.TMX('assets/area02.tmx');
+	assertEquals('tilesset count',2,tmx.tilesets.length);
+	assertEquals('tilesset 1 first gid',1,tmx.tilesets[0].firstgid);
+	assertEquals('tilesset 2 first gid',141,tmx.tilesets[1].firstgid);
+	
+	tilewidthcount0 = parseInt(tmx.tilesets[0].image.width / tmx.tilesets[0].tilewidth);
+	tileheightcount0 = parseInt(tmx.tilesets[0].image.height / tmx.tilesets[0].tileheight);
+	tilewidthcount1 = parseInt(tmx.tilesets[1].image.width / tmx.tilesets[1].tilewidth);
+	tileheightcount1 = parseInt(tmx.tilesets[1].image.height / tmx.tilesets[1].tileheight);
+	
+	tilescount = tilewidthcount0 * tileheightcount0 + tilewidthcount1 * tileheightcount1;
+	assertEquals('tilescount',tilescount,tmx.tiles.length);
+}
+
+function testTilesPropertiesTMXMap() {
+	var tmx = new lime.parser.TMX('assets/area02.tmx');
+
+	assertEquals('tile 0',0,tmx.tiles[0].properties.length);
+	assertEquals('tile 1',1,tmx.tiles[1].properties.length);
+	assertEquals('tile 2',1,tmx.tiles[2].properties.length);
+	assertEquals('tile 3',0,tmx.tiles[3].properties.length);
+}
+
+function testLayerTMXMap() {
+	var tmx = new lime.parser.TMX('assets/area02.tmx');
+
+	assertEquals('layer count',2,tmx.layers.length);
+}
+
+function testObjectsTMXMap() {
+	var tmx = new lime.parser.TMX('assets/area02.tmx');
+
+	assertEquals('objects count',24,tmx.objects.length);
+	assertEquals('object 0 properties count',2,tmx.objects[0].properties.length);
+	assertEquals('object 2 properties count',0,tmx.objects[2].properties.length);
+}
+
+function testErrorTMXMap() {
+	var error = false;
+	try {
+    var tmx = new lime.parser.TMX('assets/Notsupportedmap.tmx');
+	} catch(e) {
+		error = true;
+	}
+	assertEquals('error ?', true, error);
+}
+
+function testErrorTMXMap2() {
+	var error = false;
+	try {
+		var tmx = new lime.parser.TMX('assets/area02_base64.tmx');
+	} catch(e) {
+		error = true;
+	}
+	assertEquals('error ?', true, error);
 }
 
 </script>
