New drag-drop events demo

--- a/lime/demos/tests/run.htm
+++ b/lime/demos/tests/run.htm
@@ -18,6 +18,7 @@
                 'box2d','box2d_2',
                 'button1','button2',
                 'canvas','canvas2','canvascontext',
+                'drag1',
                 'events1','events2','events3','events4','events5',
                 'frame1','frame2','frame3','frame4',
                 'keyframe','keyframe2',
