--- a/lime/demos/tests/run.htm
+++ b/lime/demos/tests/run.htm
@@ -29,7 +29,8 @@
                 'shapes1','shapes2','shapes3',
                 'scroll',
                 'stroke',
-                'tiled1', 'tiled2', 'tiled3'
+                'tiled1', 'tiled2', 'tiled3', 'template',
+                'transitions1'
                 ].sort();
                 
             for(var i=0;i<_allDemos.length;i++){
