Multiline labels implementation attempt

--- a/lime/demos/tests/run.htm
+++ b/lime/demos/tests/run.htm
@@ -22,7 +22,7 @@
                 'events1','events2','events3','events4','events5',
                 'frame1','frame2','frame3','frame4',
                 'keyframe','keyframe2',
-                'labels1',
+                'labels1', 'labels2',
                 'mask','mask2',
                 'opacity',
                 'poly1',
