--- a/lime/demos/tests/run.htm
+++ b/lime/demos/tests/run.htm
@@ -29,7 +29,7 @@
                 'shapes1','shapes2','shapes3',
                 'scroll',
                 'stroke',
-                'tiled1', 'tiled2', 'tiled3', 'template',
+                'tiled1', 'tiled2', 'tiled3',
                 'transitions1'
                 ].sort();
                 
