--- a/lime/demos/pong/compiled/pong.html
+++ b/lime/demos/pong/compiled/pong.html
@@ -2,107 +2,120 @@
 
 <html manifest="pong.manifest">
 <head>
-	<title>pong</title>
-    <script type="text/javascript">
-        document.write('<link rel="apple-touch-startup-image" href="assets/startup'+(navigator.platform=='iPad'?'_ipad':'')+'.jpg">');
-    </script>
-    <link rel="apple-touch-icon" href="assets/icon.png"/>
+  <title>pong</title>
+  <script type="text/javascript">
+    document.write('<link rel="apple-touch-startup-image" href="assets/startup'+(navigator.platform=='iPad'?'_ipad':'')+'.jpg">');
+  </script>
+  <link rel="apple-touch-icon" href="assets/icon.png"/>
 </head>
 <body>
-   	<script type="text/javascript">
-		(function(name,callback){
+  <script type="text/javascript">
+    (function(name, firstFunc){
 
-			var getObjectByName = function(name, opt_obj) {
-				var parts = name.split('.');
-				var cur = opt_obj || window;
-				for (var part; part = parts.shift(); ) {
-					if (cur[part]) {
-						cur = cur[part];
-					} else {
-						return null;
-					}
-				}
-				return cur;
-			};
+      function getObjectByName(name, opt_obj) {
+        var parts = name.split('.');
+        var cur = opt_obj || window;
+        var part;
+        while (part = parts.shift()) {
+          if (cur[part]) {
+            cur = cur[part];
+          } else {
+            return null;
+          }
+        }
+        return cur;
+      };
 
-			var webappCache = window.applicationCache;
+      function loadJS(call){
+        var script = document.createElement('script');
+        script.setAttribute('type','text/javascript');
+        script.setAttribute('src',name);
+        script.onload = function(){
+          (getObjectByName(firstFunc))();
+          call();
+        };
+        document.getElementsByTagName('head')[0].appendChild(script);
+      }
 
-			if(webappCache){
+      var webappCache = window.applicationCache;
 
-				var WIDTH = 200,
-					HEIGHT = 100;
+      if(webappCache && window.navigator.userAgent.indexOf('WebKit') != -1){
 
-				var scripts = document.getElementsByTagName('script');
-				var script = scripts[scripts.length-1];
-				var el = document.createElement('div');
-				var parent = script.parentNode;
-				if(parent.style.position!='absolute' && parent.style.position!='relative'){
-					parent.style.cssText = 'relative';
-				}
-				var pwidth = window.innerWidth;
-				var pheight = window.innerHeight;
-				el.style.cssText = 'text-align:center;width:'+WIDTH+'px;height:'+HEIGHT+'px;position:absolute;left:'+Math.round((pwidth-WIDTH)*.5)+'px;top:'+Math.round((pheight-HEIGHT)*.5)+'px';
-				script.parentNode.insertBefore(el,script);
-				script.parentNode.removeChild(script);
+        var WIDTH = 200, HEIGHT = 100;
 
-				var close = function(){
-					el.innerHTML = 'Starting';
-					var script = document.createElement('script');
-					script.setAttribute('type','text/javascript');
-					script.onload = function(){
-						el.parentNode.removeChild(el);
-						(getObjectByName(callback))();
-					};
-					
-					script.setAttribute('src',name);
-					document.getElementsByTagName('head')[0].appendChild(script);
-				};
+        var scripts = document.getElementsByTagName('script');
+        var script = scripts[scripts.length - 1];
+        var el = document.createElement('div');
+        var parent = script.parentNode;
+        if(parent.style.position!='absolute' && parent.style.position!='relative'){
+          parent.style.cssText = 'relative';
+        }
+        var pwidth = window.innerWidth;
+        var pheight = window.innerHeight;
+        el.style.cssText = 'text-align:center;width:'+WIDTH+'px;height:'+HEIGHT+'px;position:absolute;left:'+Math.round((pwidth-WIDTH)*.5)+'px;top:'+Math.round((pheight-HEIGHT)*.5)+'px';
+        script.parentNode.insertBefore(el,script);
+        script.parentNode.removeChild(script);
 
-				webappCache.addEventListener('checking', function(){
-					//console.log('checking');
-					el.innerHTML = 'Initializing';  
-					},false);
+        var started = false;
+        var lastProgress = new Date
+        var timeout;
 
-				webappCache.addEventListener('cached', function(){
-					//console.log('cached');
-					close();
-				},false);
+        function init(){
+          if(started) return;
+          el.innerHTML = '';
+          loadJS(function(){ el.parentNode.removeChild(el); });
+          started = true;
+          clearTimeout(timeout);
+        };
 
-				webappCache.addEventListener('noupdate', function(){
-					//console.log('noupdate');
-					close();
-				},false);
+        function timeoutFunc() {
+          if (new Date - lastProgress > 3000) {
+            init()
+          }
+          else {
+            lastProgress = new Date
+            timeout = setTimeout(timeoutFunc, 3000)
+          }
+        }
+        timeoutFunc()
 
-				webappCache.addEventListener('updateready', function(){
-					//console.log('updateready');
-					webappCache.swapCache();
-					close();
-				},false);
-/*
-			webappCache.addEventListener('downloading', function(){
-					console.log('downloading 3');
-					el.innerHTML = 'Loading';
-				},false);
+        webappCache.addEventListener('checking', function(){
+          el.innerHTML = 'Initializing...';
+        },false);
 
-				webappCache.addEventListener('progress', function(e){
-					console.log('progress '+e.loaded+'/'+e.total);
-					el.innerHTML = 'Loading '+e.loaded+'/'+e.total; 
-				},false);
-*/
-				webappCache.addEventListener('obsolete', function(){
-					//console.log('obsolete')
-					close();
-				}, false);
+        webappCache.addEventListener('cached', function(){
+          init();
+        },false);
 
-				webappCache.addEventListener('error', function(e){
-					//console.log('error');
-					close();
-				}, false);
-			}
+        webappCache.addEventListener('noupdate', function(){
+          init();
+        },false);
 
-		})('pong.js','pong.start');
+        webappCache.addEventListener('updateready', function(){
+          //webappCache.swapCache();
+          window.location.reload()
+        },false);
 
-		</script>
+        webappCache.addEventListener('progress', function(e){
+          lastProgress = new Date
+          el.innerHTML = 'Loading... ' + Math.round(e.loaded / e.total * 100) + '%';
+        },false);
+
+        webappCache.addEventListener('obsolete', function(){
+          init();
+        }, false);
+
+        webappCache.addEventListener('error', function(e){
+          init();
+        }, false);
+      }
+      else {
+        loadJS(function(){});
+      }
+
+    })('pong.js','pong.start');
+
+    </script>
 </body>
 
 </html>
