--- a/lime/demos/typing-game/zlizer.html
+++ b/lime/demos/typing-game/zlizer.html
@@ -4,8 +4,13 @@
 <head>
 	<title>ydn.game</title>
 	<meta name="format-detection" content="telephone=no">
-	<script type="text/javascript" src="../../../closure/closure/goog/base.js"></script>
-	<script type="text/javascript" src="ydn.game.js"></script>
+	<script type="text/javascript" src="../../../../closure-library/closure/goog/base.js"></script>
+	<script type="text/javascript" src="../../src/deps.js"></script>
+	<script type="text/javascript" src="deps.js"></script>
+    <script type="text/javascript" src="../../css/lime.css.soy.js"></script>
+    <script type="text/javascript">
+        goog.require('ydn.game');
+    </script>
 	<style>
 	body {
 	background: #5ea71d;
