using closure animation delay

--- a/lime/tests/schedulemanager.htm
+++ b/lime/tests/schedulemanager.htm
@@ -9,7 +9,7 @@
   goog.require('goog.testing.jsunit');
   goog.require('goog.testing.recordFunction');
   goog.require('goog.testing.PropertyReplacer');
-  goog.require('lime.scheduleManager');
+  goog.require('lime.ScheduleManager');
 </script>
 </head>
 <style>
