--- a/lime/demos/tests/run.htm
+++ b/lime/demos/tests/run.htm
@@ -30,7 +30,9 @@
                 'scroll',
                 'stroke',
                 'tiled1', 'tiled2', 'tiled3',
-                'transitions1'
+                'transitions1',
+                'video',
+                'video2'
                 ].sort();
                 
             for(var i=0;i<_allDemos.length;i++){
